# summori

./: README.md  pyproject.toml  render.yaml
.github/workflows/: test.yaml
apps/api/: .env.sample  Makefile  pyproject.toml
apps/api/api/: config.py  discord.py  main.py
apps/api/tests/: test_main.py
docker/api/: Dockerfile
