[project]
name = "api"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "beautifulsoup4==4.12.3",
    "html2text==2024.2.26",
    "langchain-community==0.3.11",
    "langchain-openai==0.2.12",
    "pydantic-settings==2.6.1",
]

[dependency-groups]
dev = ["mypy==1.13.0", "ruff==0.8.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
