[project]
name = "api"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "beautifulsoup4==4.12.3",
    "html2text==2024.2.26",
    "langchain-community==0.3.12",
    "langchain-openai==0.2.12",
    "pydantic-ai[logfire]==0.0.14",
    "pydantic-settings==2.7.0",
    "requests==2.32.3",
]

[dependency-groups]
dev = [
    "mypy==1.13.0",
    "pytest==8.3.4",
    "ruff==0.8.3",
    "types-beautifulsoup4==4.12.0.20241020",
    "types-requests==2.32.0.20241016",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
